src/objects/QIRS__c.object
<CustomObject>
    <fields>
        <fullName>Process_Owner1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person responsible for driving actions</inlineHelpText>
        <label>Case Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Nokia QIRS,Nokia QIRS Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <description>All Process Owner pick-list values.</description>
        <label>Process Owner2</label>
        <picklist>
            <picklistValues>
                <fullName>Anthony Thomas</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Crish Food</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_to_Stop__c</fullName>
        <formula>&apos;Shipping (&apos;+ Site_Filter__c +&apos;)&apos;</formula>
        <label>Process to Stop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PN__c</fullName>
        <label>Product PN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the case is identified as &quot;Product Safety&quot; case</inlineHelpText>
        <label>Product Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Lift_Date__c</fullName>
        <inlineHelpText>Enter projected lift date for this record</inlineHelpText>
        <label>Estimated Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pronto__c</fullName>
        <label>Pronto id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_EDA__c</fullName>
        <label>RCA/EDA id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region select list for QIRS record</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RejectedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RejectedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Cycle_Time_Days__c</fullName>
        <formula>Lifted_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Cycle Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolve__c</fullName>
        <label>Resolve id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Backlog__c</fullName>
        <description>Revenue from the orders listed Field.</description>
        <inlineHelpText>Potential revenue miss due to this issue.</inlineHelpText>
        <label>Revenue at Risk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Impact__c</fullName>
        <inlineHelpText>Revenue which was has been missed due to this issue.</inlineHelpText>
        <label>Revenue Impact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Input__c</fullName>
        <description>Serial number input works like a radio button as in main application.</description>
        <label>Serial Number input</label>
        <picklist>
            <picklistValues>
                <fullName>Text File</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Text Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Serial_Numbers__c</fullName>
        <description>Serial numbers required text.</description>
        <inlineHelpText>Multiple serial numbers can be entered using a comma (,)</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site1__c</fullName>
        <inlineHelpText>Enter the site that found the issue</inlineHelpText>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Aichi Japan (Flextronic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alsdorf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APW India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arden Hills (Celestica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arlington Heights (IL75)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangkok (Benchmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin, Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruchsal, Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celestica Czechia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceragon Isreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai (Flextronics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chihuahua (Foxconn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copenhagen (Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS - Matamoras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS - TJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech (Foxconn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dongguan (Accton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dongguan (Aztech)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doumen (Flextronics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop Ship Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Düsseldorf, Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elcoteq Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elgin (After Market) - Illinois</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_Filter__c</fullName>
        <label>Site Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusColor__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Open&quot;) ,&quot;red&quot;,IF( ISPICKVAL(Status__c,&quot;Closed&quot;) ,&quot;YellowGreen &quot;, 
IF( ISPICKVAL(Status__c,&quot;Released&quot;) ,&quot;Yellow&quot;,
IF( ISPICKVAL(Status__c,&quot;Submitted to Master Approval&quot;) ,&quot;Orange&quot;,
&quot;Pink&quot;))))</formula>
        <label>StatusColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Open&quot;) ,
IMAGE(&quot;/resource/1324734865000/QIRS_Open&quot;,&quot;Open&quot;),
IF( ISPICKVAL(Status__c,&quot;Closed&quot;) ,
IMAGE(&quot;/resource/1324734865000/QIRS_Closed&quot;,&quot;Closed&quot;),
IF( ISPICKVAL(Status__c,&quot;Released&quot;) ,
IMAGE(&quot;/resource/1332234206000/QIRS_Released&quot;,&quot;Released&quot;),
IF( ISPICKVAL(Status__c,&quot;Submitted to Master Approval&quot;) ,
IMAGE(&quot;/resource/1324735178000/QIRS_SFMA&quot;,&quot;SFMS&quot;),
IMAGE(&quot;/resource/1324734865000/QIRS_Canceled&quot;,&quot;Canceled&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>All Status names.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#FF0000</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Master Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Pn__c</fullName>
        <inlineHelpText>Enter Supplier PN</inlineHelpText>
        <label>Supplier PN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <inlineHelpText>If there is more than one supplier, separate with a comma</inlineHelpText>
        <label>Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <description>The symptom depends on the defective part selected.</description>
        <inlineHelpText>Select Symptom</inlineHelpText>
        <label>Symptom</label>
        <picklist>
            <controllingField>Defective_Part__c</controllingField>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Labeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Process Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marginal/Incorrect Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD - Under Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmanship general</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmanship soldering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not to Customer requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship location error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not an issue(NTF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Process control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Quality_Spills_Cost__c</fullName>
        <description>Total cost impact generated by the stop shipment occurrence field.</description>
        <inlineHelpText>total cost impact due to this issue (recall, rework, inspection or other)</inlineHelpText>
        <label>Retrofit costs</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Backlog__c</fullName>
        <description>Quantity of items from the orders listed field.</description>
        <inlineHelpText>Number of units at risk due to this issue</inlineHelpText>
        <label>Units at Risk</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_Impact__c</fullName>
        <inlineHelpText>Number of units impacted by the issue</inlineHelpText>
        <label>Affected units at factory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_AP_Color__c</fullName>
        <label>View AP Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Release_Product__c</fullName>
        <label>View Release Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WatchListComment__c</fullName>
        <label>WatchListComment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WatchListType_Color__c</fullName>
        <formula>IF(  ((WatchListType__c ==&apos;ProgressRed&apos;) ||  (WatchListType__c ==&apos;NoChangeRed&apos;) ||  (WatchListType__c ==&apos;RegressRed&apos;)),&quot;red&quot;,

IF(  ((WatchListType__c ==&apos;RegressYellow&apos;) ||  (WatchListType__c ==&apos;ProgressYellow&apos;) ||  (WatchListType__c ==&apos;NoChangeYellow&apos;)) ,&quot;Yellow&quot;,&quot;#00FF00&quot;


))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WatchListType Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WatchListType__c</fullName>
        <defaultValue>&quot;NoChangeYellow&quot;</defaultValue>
        <label>WatchListType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watchlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether to put the QIRS record on watchlist notification or not</description>
        <label>Watchlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the supplier charge back.</description>
        <inlineHelpText>Select Yes</inlineHelpText>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <label>QIRS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QIRS-{000000}</displayFormat>
        <label>Record Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QIRS</pluralLabel>
    <recordTypes>
        <fullName>APAC</fullName>
        <active>true</active>
        <label>APAC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Africa</fullName>
        <active>true</active>
        <label>Africa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asia</fullName>
        <active>true</active>
        <label>Asia</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA</fullName>
        <active>true</active>
        <label>EMEA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Europe</fullName>
        <active>true</active>
        <label>Europe</label>
    </recordTypes>
    <recordTypes>
        <fullName>Greater_China</fullName>
        <active>true</active>
        <label>Greater China</label>
    </recordTypes>
    <recordTypes>
        <fullName>India</fullName>
        <active>true</active>
        <label>India</label>
    </recordTypes>
    <recordTypes>
        <fullName>Japan</fullName>
        <active>true</active>
        <label>Japan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Latin</fullName>
        <active>true</active>
        <label>Latin America</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Record</fullName>
        <active>true</active>
        <label>Master Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Middle_East</fullName>
        <active>true</active>
        <label>Middle East</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Record_Notification</fullName>
        <active>true</active>
        <description>Only to show button New recod notification</description>
        <label>New Record Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>North_America</fullName>
        <active>true</active>
        <label>North America</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CaseOwner__c</fullName>
        <label>CaseOwner</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ChampApprover__c</fullName>
        <label>ChampApprover</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Master_Approver__c</fullName>
        <label>Master Approver</label>
    </sharingReasons>
    <validationRules>
        <fullName>QIRS_BusinessGroup_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK( Business_Group__c ), true, false)</errorConditionFormula>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Closed_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Closed__c == true, true, false)</errorConditionFormula>
        <errorMessage>Closed Record can not be edited</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Customer_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Customer__c )</errorConditionFormula>
        <errorDisplayField>Customer__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Defective_part_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Defective_Part__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Defective_Part__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Factory_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(   Factory__c   ), true, false)</errorConditionFormula>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Impated_Region_validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISBLANK(Impacted_Region__c), true, false)</errorConditionFormula>
        <errorDisplayField>Impacted_Region__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Issue_Level_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Issue_Level__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Issue_Level__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Problem_dissuction_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Problem_Description1__c )</errorConditionFormula>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_ProcessOwner_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Process_Owner1__c )</errorConditionFormula>
        <errorDisplayField>Process_Owner1__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Projected_Lift_Date_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Projected_Lift_Date__c )</errorConditionFormula>
        <errorDisplayField>Projected_Lift_Date__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Site_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISBLANK( Site1__c  ), true, false)</errorConditionFormula>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Supplier_Validation</fullName>
        <active>false</active>
        <description>QIRS Supplier validation.</description>
        <errorConditionFormula>IF(AND(Yes__c = true,  (Supplier__c  =&apos;&apos; ||  Supplier_Pn__c  =&apos;&apos; || NSN_Part_Number__c =&apos;&apos;)) , true, false)</errorConditionFormula>
        <errorMessage>Supplier details Can not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Symptom_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Symptom__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Symptom__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Validation_Impacted_country</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISBLANK( Countries__c ), true, false)</errorConditionFormula>
        <errorDisplayField>Countries__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QIRS_Watchlist_Check</fullName>
        <active>false</active>
        <errorConditionFormula>IF(  TEXT(Issue_Level__c) == &apos;Moderate&apos; &amp;&amp;  Watchlist__c == true , true, false)</errorConditionFormula>
        <errorMessage>Record can not be included under  watchlist if Issue level is selected as Moderate.</errorMessage>
    </validationRules>
</CustomObject>